# alure

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  config.h.in
cmake/: FindDUMB.cmake  FindFLAC.cmake  FindMPG123.cmake  FindOgg.cmake  FindOpus.cmake  FindVorbis.cmake
examples/: alure-dumb.cpp  alure-enum.cpp  alure-hrtf.cpp  alure-physfs.cpp  alure-play.cpp  alure-play3d.cpp  alure-reverb.cpp  alure-stream.cpp
include/AL/: alure2-aliases.h  alure2-typeviews.h  alure2.h
src/: auxeffectslot.cpp  auxeffectslot.h  buffer.cpp  buffer.h  context.cpp  context.h  device.cpp  device.h  devicemanager.cpp  devicemanager.h  effect.cpp  effect.h  main.h  refcount.h  ringbuf.cpp  ringbuf.h  source.cpp  source.h  sourcegroup.cpp  sourcegroup.h
src/decoders/: dr_flac.h  flac.cpp  flac.hpp  minimp3.h  mp3.cpp  mp3.hpp  mpg123-1.cpp  mpg123-1.h  mpg123.cpp  mpg123.hpp  opusfile.cpp  opusfile.hpp  sndfile.cpp  sndfile.hpp  sndfile1.cpp  sndfile1.h  vorbisfile.cpp  vorbisfile.hpp  vorbisfile1.cpp  vorbisfile1.h  wave.cpp  wave.hpp
